--- a/sources/requirements/core/REQ_vocabulary.adoc
+++ b/sources/requirements/core/REQ_vocabulary.adoc
@@ -1,8 +1,9 @@
 [[req_vocabulary-and-parent-req-class]]
+[[req-3]]
 
 [requirement]
 ====
 [%metadata]
 identifier:: /req/core/vocabulary-and-parent-req-class
-part:: Requirements on the use and interpretation of vocabulary SHALL be in the requirements class where that use or interpretation is used.
+part:: Requirements on the use and interpretation of vocabulary _SHALL_ be in the requirements class where that use or interpretation is used.
 ====
