--- a/sources/release-notes-1-1/sections/clause-5-critical.adoc
+++ b/sources/release-notes-1-1/sections/clause-5-critical.adoc
@@ -1,7 +1,7 @@
 [[Clause_Critical]]
 == Description of critical changes
 
-There are six (6) critical changes in the ModSpec: Core Standard. None of these changes affect backwards compatibility.
+There are six (7) critical changes in the ModSpec: Core Standard. None of these changes affect backwards compatibility.
 
 === Critical Change 1: ModSpec 1.1 is not OGC Policy. 
 
@@ -65,5 +65,5 @@ contain a statement of the Standardization Goal.
 
 === Critical Change 7: Rework of UML Model
 
-The ModSpec includes Annex C. Annex C provides a UML diagram that documents the ModSpec Model. The UML diagram was update to reflect changes made based on submitted issues.
+The ModSpec includes Annex C. Annex C provides a UML diagram that documents the ModSpec Model. The UML diagram was updated to reflect changes made based on submitted issues.
 
