--- a/sources/requirements/core/REQ4_single-standardization-target.adoc
+++ b/sources/requirements/core/REQ4_single-standardization-target.adoc
@@ -1,8 +1,10 @@
 [[req_single-standardization-target]]
 
+[[req-4]]
+
 [requirement]
 ====
 [%metadata]
 identifier:: /req/core/single-standardization-target
-part:: Each requirement class in a conformant standard SHALL have a single standardization target type.
+part:: Each requirement class in a conformant standard SHALL have a single standardization target.
 ====
