--- a/sources/requirements/core/REQ9_no-optional-tests.adoc
+++ b/sources/requirements/core/REQ9_no-optional-tests.adoc
@@ -1,8 +1,10 @@
 [[req_no-optional-tests]]
 
+[[req-9]]
+
 [requirement]
 ====
 [%metadata]
 identifier:: /req/core/no-optional-tests
-part:: A conformance class SHALL not contain any optional conformance tests.
+part:: A conformance class _SHALL_ not contain any optional conformance tests.
 ====
