Update and rename REQ_req-in-only-one-req-class.adoc to REQ15_req-in-only-one-req-class.adoc

--- a/sources/requirements/core/REQ15_req-in-only-one-req-class.adoc
+++ b/sources/requirements/core/REQ15_req-in-only-one-req-class.adoc
@@ -1,9 +1,10 @@
 [[req_req-in-only-one-req-class]]
+[[req-15]]
 
 [requirement]
 ====
 [%metadata]
 identifier:: /req/core/req-in-only-one-req-class
 part:: Each requirement in the standard SHALL be contained in one and only one requirements class.
-part:: Inclusion of any requirement in a requirements class by a conformance class SHALL imply inclusion of all requirements in its class (as a dependency).
+part:: Inclusion of any requirement in a requirements class by a conformance class _SHALL_ imply inclusion of all requirements in its class (as a dependency).
 ====
