--- a/sources/requirements/core/REQ15_req-in-only-one-req-class.adoc
+++ b/sources/requirements/core/REQ15_req-in-only-one-req-class.adoc
@@ -5,6 +5,6 @@
 ====
 [%metadata]
 identifier:: /req/core/req-in-only-one-req-class
-part:: Each requirement in the standard SHALL be contained in one and only one requirements class.
+part:: Each requirement in the standard _SHALL_ be contained in one and only one requirements class.
 part:: Inclusion of any requirement in a requirements class by a conformance class _SHALL_ imply inclusion of all requirements in its class (as a dependency).
 ====
