--- a/sources/sections/06-req-class.adoc
+++ b/sources/sections/06-req-class.adoc
@@ -224,7 +224,7 @@ Strict parallelism of implementation and governance is the essence of this stand
 ===== Each Conformance class tests a complete requirements class
 
 [[req-9]]
-include::../requirements/core/REQ_no-optional-tests.adoc[]
+include::../requirements/core/REQ9_no-optional-tests.adoc[]
 
 This requirement stops
 conformance classes from containing optional requirements and tests, and, at least
@@ -257,12 +257,12 @@ parameter, such as GML, KML or GeoJSON. When reading a certificate of conformanc
 the values of such parameters are very important.
 
 [[req-10]]
-include::../requirements/core/REQ_all-parameters-expressed.adoc[]
+include::../requirements/core/REQ10_all-parameters-expressed.adoc[]
 
 Conformance to a particular conformance class means exactly the same thing everywhere.
 
 [[req-11]]
-include::../requirements/core/REQ_conf-class-single-req-class.adoc[]
+include::../requirements/core/REQ11_conf-class-single-req-class.adoc[]
 
 This means that there is a strict correspondence between the requirements classes
 and the conformance test classes in the test suite. Recall that a conformance test
@@ -270,7 +270,7 @@ class may specify dependencies causing other conformance test classes to be used
 but this is a result of an explicit requirement in the "home" requirements class.
 
 [[req-12]]
-include::../requirements/core/REQ_con-class-dependencies.adoc[]
+include::../requirements/core/REQ12_con-class-dependencies.adoc[]
 
 Such referenced conformance classes may be in the same standard or may be a
 conformance class of another standard.
@@ -302,14 +302,14 @@ and testing, so for use within a standard compliant to the ModSpec, special
 care must be taken in importing conformance test classes from other standards.
 
 [[req-13]]
-include::../requirements/core/REQ_imported-requirements-class.adoc[]
+include::../requirements/core/REQ13_imported-requirements-class.adoc[]
 
 The tracking of the parallelism between requirements and tests should be easy if the
 standards document is non-ambiguous. To insure this, by utilizing the names of the two types of classes the following requirement places a
 default mapping between the two.
 
 [[req-14]]
-include::../requirements/core/REQ_all-classes-explicitly-named.adoc[]
+include::../requirements/core/REQ14_all-classes-explicitly-named.adoc[]
 
 Logically, a requirements class (set of requirements) and a conformance class (set
 of tests) are not comparable. This can be remedied by noting that both have a
@@ -322,7 +322,7 @@ both are related (as described) to the same set of requirements.
 ==== Requirements classes contain all requirements tested by a conformance test case
 
 [[req-15]]
-include::../requirements/core/REQ_req-in-only-one-req-class.adoc[]
+include::../requirements/core/REQ15_req-in-only-one-req-class.adoc[]
 
 Unless a requirement is referenced in a conformance test and thus in a conformance
 class, it cannot be considered a requirement since no test has been defined for it.
@@ -344,7 +344,7 @@ here, since a single requirement can be stated twice in different requirements
 classes.
 
 [[req-16]]
-include::../requirements/core/REQ_co-dependent-requirements.adoc[]
+include::../requirements/core/REQ16_co-dependent-requirements.adoc[]
 
 Normally, circular dependencies between implementation components are signs of a
 poor design, but they often cannot be avoided because of other considerations (code
@@ -359,7 +359,7 @@ Circular dependencies of all types _SHOULD_ be avoided whenever possible.
 |===
 
 [[req-17]]
-include::../requirements/core/REQ_structure-requirements-classes.adoc[]
+include::../requirements/core/REQ17_structure-requirements-classes.adoc[]
 
 [NOTE]
 ====
@@ -377,7 +377,7 @@ a "plug'n'play" fashion.
 
 
 [[req-18]]
-include::../requirements/core/REQ_requirements-and-dependencies.adoc[]
+include::../requirements/core/REQ18_requirements-and-dependencies.adoc[]
 
 This means, for example, that a UML classifier cannot be redefined in a new
 extension. If a new version of the classifier is needed it has to be a valid subtype
@@ -403,19 +403,21 @@ of all conformance classes) for defining profiles as defined in ISO/IEC 10000 (s
 requirements classes.
 
 [[req-19]]
-include::../requirements/core/REQ_profile-conformance.adoc[]
+include::../requirements/core/REQ19_profile-conformance.adoc[]
 
 [[cls-6-5-4]]
 ==== There is a Defined Core
 
+The following requirements define the content of the core.
+
 [[req-20]]
-include::../requirements/core/REQ_core-requirements-separate.adoc[]
+include::../requirements/core/REQ20_core-requirements-separate.adoc[]
 
 [[req-21]]
-include::../requirements/core/REQ_requirements-and-dependencies-2.adoc[]
+include::../requirements/core/REQ21_requirements-and-dependencies-2.adoc[]
 
 [[req-22]]
-include::../requirements/core/REQ_requirements-and-dependencies-3.adoc[]
+include::../requirements/core/REQ22_requirements-and-dependencies-3.adoc[]
 
 [[rec-4]]
 [recommendation,model=ogc,type="general"]
@@ -478,10 +480,10 @@ extensions, which may be either local or encompass other standards.
 Standards should use extensions as required and feasible, but should never hinder them.
 
 [[req-23]]
-include::../requirements/core/REQ_core-and-extensions.adoc[]
+include::../requirements/core/REQ23_core-and-extensions.adoc[]
 
 [[req-24]]
-include::../requirements/core/REQ_extensions-conformant-to-modspec.adoc[]
+include::../requirements/core/REQ24_extensions-conformant-to-modspec.adoc[]
 
 Since software is evolutionary at its best, it would not be wise to restrict that
 evolutionary tendency by restricting the specification of extensions. A
@@ -490,7 +492,7 @@ will never list things that a standardization target might want to do above and
 beyond the current design requirements.
 
 [[req-25]]
-include::../requirements/core/REQ_restriction-of-extensions.adoc[]
+include::../requirements/core/REQ25_restriction-of-extensions.adoc[]
 
 The above requirement should not be interpreted as a restriction on quality
 control. Any efforts by a standard to enforce a level of quality on its
@@ -505,16 +507,12 @@ GeoJSON, as long at that alternative can carry viable information consistent wit
 the fundamental intent of the standard.
 
 [[cls-6-5-6]]
-==== Optional requirements are organized as requirements classes
+==== Optional requirements are organized as optional requirements classes
 
 [[req-26]]
-include::../requirements/core/REQ_optional-requirements.adoc[]
+include::../requirements/core/REQ26_optional-requirements.adoc[]
 
-NOTE: Standards and implementations are restricted by this, but not instances of
-schemas. For example, a XML schema standard can specify an optional element, which
-data instances may use or not. However schema-aware processors claiming conformance
-to the standard should be able to handle all elements defined in the schema, whether
-they are required by the schema or not.
+A standard and implementations of that standard are restricted by this requirement.
 
 Requirements of the form "if the implementation does this, it must do it this way"
 are considered to be options and should be in a separate requirements class.
@@ -523,7 +521,7 @@ are considered to be options and should be in a separate requirements class.
 ==== Requirements classes intersect overlap only by reference
 
 [[req-27]]
-include::../requirements/core/REQ_req-class-overlap-by-reference.adoc[]
+include::../requirements/core/REQ27_req-class-overlap-by-reference.adoc[]
 
 This implies that each requirement is directly in exactly one requirements class and
 all references to that requirement from another requirements class must include its
